[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ESPythoNOW"
version = "0.0.1"
description = "A Python library for sending, receiving, and monitoring ESP-NOW messages on Linux"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "ChuckMash"}
]
keywords = ["espnow", "esp-now", "esp8266", "esp32", "iot", "wireless", "networking", "linux", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Communications",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/ChuckMash/ESPythoNOW"
Repository = "https://github.com/ChuckMash/ESPythoNOW"
Issues = "https://github.com/ChuckMash/ESPythoNOW/issues"

[project.scripts]
espythonow = "ESPythoNOW:main"

[tool.setuptools]
py-modules = ["ESPythoNOW"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
